fix: wrong color in graphs when enforcing dark mode #25

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,16 @@
 
 $footer-height: 64px;
 
+.theme-light {
+  color: rgb(37, 37, 37);
+  background: #ffffff;
+}
+
+.theme-dark {
+  color: #ffffff;
+  background: #343332;
+}
+
 .wrapper {
   min-height: 100%;
   margin-bottom: -$footer-height;
